--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -17,6 +17,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL_DEV: ${{ secrets.DATABASE_URL_DEV }}
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
