--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DATABASE_URL_DEV: ${{ secrets.DATABASE_URL_DEV }}
+      SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL_DEV }}
 
     steps:
     - uses: actions/checkout@v4
