--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -19,6 +19,7 @@ jobs:
 
     env:
       SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL_DEV }}
+      CI_ENV: true # indicates to the config.py file that 
 
     steps:
     - uses: actions/checkout@v4
