--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL_DEV }}
-      CI_ENV: true # indicates to the config.py file that 
+      DATABASE_URL_DEV: ${{ secrets.DATABASE_URL_DEV }}
+      CI_ENV: true # indicates to config.py file that app is running in CI env
 
     steps:
     - uses: actions/checkout@v4
