--- a/.github/workflows/test-python-app.yml
+++ b/.github/workflows/test-python-app.yml
@@ -21,6 +21,8 @@ jobs:
     env:
       DATABASE_URL_DEV: ${{ secrets.DATABASE_URL_DEV }}
       CI_ENV: true # indicates to config.py file that app is running in CI env
+      TEST_USER: ${{ secrets.TEST_USER }} # for pytest configuration
+      TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
 
     steps:
     - uses: actions/checkout@v4
